Implemented select for contexts as well

--- a/spec/dance-select/manifest.yml
+++ b/spec/dance-select/manifest.yml
@@ -2,6 +2,8 @@ path: templates
 templates:
   - abc:
   - def:
+      contexts:
+        - karjakin
       environments:
         - pqr
         - stu
