--- a/spec/dance-select/manifest.yml
+++ b/spec/dance-select/manifest.yml
@@ -1,7 +1,7 @@
 path: templates
 templates:
-  - caruana:
-  - hikaru:
+  - test-rain-caruana:
+  - test-rain-hikaru:
       contexts:
         - corus
       environments:
